# Project-1-AtmoSync-Micro-Climate-Arbitrage-Analytics

./: HOW_TO_RUN.txt  README.md  RUN_COMMANDS.txt  not_use_it_HOW_TO_RUN.txt
dashboard/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
decision_engine/: Cargo.toml
decision_engine/src/: main.rs
output/: decisions.jsonl
packet_interceptor/: generator.py  interceptor.py  sample_log.jsonl
physics_engine/: pipeline.mo  requirements.txt  simulate_pipeline.py
shared/: __init__.py  models.py
web/backend/: app.py
web/frontend/: index.html
web/frontend/static/: app.js  style.css
